# EphemeralML

./: .dockerignore  .gcloudignore  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gcp  Dockerfile.gpu  Dockerfile.verifier  INVESTOR_REVIEW.md  QUICKSTART.md  README.md  SECURITY.md  cloudbuild-gpu.yaml  cloudbuild.yaml  demo-receipt.json  demo-receipt.json.pubkey  demo-recording.cast  deny.toml  index.html  robots.txt  sitemap.xml
.github/: pull_request_template.md
attestation-evidence/: receipt-real-tdx.json
benchmark_results/: baseline_results.json  baseline_results_run2.json  baseline_v3.json  benchmark_report.md  benchmark_report_v3.md  benchmark_report_v4.md  benchmark_report_v5.md  concurrent_v1.json  cose_v1.json  crypto_v1.json  e2e_v1.json  enclave_results.json  enclave_results_run2.json  enclave_v3.json
benchmark_results_aws_nitro_modern_20260225/: baseline_results.json  cose_results.json  enclave_results.json
benchmark_results_aws_nitro_modern_20260225_clean/: run_metadata.json
benchmark_results_multimodel_20260205/: paper_tables_combined.tex  quality_determinism_3runs.json
client/: Cargo.toml
client/demo/: discharge-summary.txt  radiology-report.txt
client/src/: attestation_bridge.rs  attestation_verifier.rs  decomposer.rs  error.rs  freshness.rs  lib.rs  main.rs  mock.rs  model_validation.rs  policy.rs  receipt_key.rs  secure_client.rs  types.rs
client/src/gcp/: commands.rs  config.rs  doctor.rs  mod.rs  preflight.rs  runner.rs  tests.rs
common/: Cargo.toml
common/examples/: emit_sample_bundle.rs  verify_platform_evidence.rs
common/src/: air_receipt.rs  air_verify.rs  attest_verify.rs  audit.rs  cbor.rs  error.rs  hpke_session.rs  inference.rs  kms_proxy.rs  lib.rs  metrics.rs  model_manifest.rs  model_registry.rs  platform_evidence.rs  protocol.rs  receipt_signing.rs  receipt_verify.rs  storage_protocol.rs  transport_types.rs  types.rs  validation.rs  verification_report.rs  vsock.rs
common/src/ui/: config.rs  explain.rs  mascot.rs  mod.rs  render.rs  verification.rs
common/tests/: air_v1_vectors_test.rs
compliance/: Cargo.toml
compliance/src/: error.rs  lib.rs
compliance/src/controls/: baseline.rs  hipaa.rs  mod.rs
compliance/src/evidence/: collector.rs  mod.rs  schema.rs
compliance/src/export/: json_export.rs  mod.rs  signing.rs
compliance/src/policy/: mod.rs  profiles.rs  rules.rs
compliance/tests/: conformance_test.rs  integration.rs
demo-artifacts/: RUN.md  demo-recording.cast  infer-output-gcp.txt  receipt-gcp.json  receipt-gcp.json.pubkey  receipt-local.json  receipt-local.json.pubkey  tamper-verify-output-gcp.txt  verify-output-gcp.txt
docs/: AIR_PROOF_BOUNDARY.md  ARTIFACT_PUBLICATION.md  AWS_NATIVE_POC_RUNBOOK.md  AWS_NITRO_E2E_REPORT.md  AWS_NITRO_E2E_RUNBOOK.md  BENCHMARK_SPEC.md  CLI_E2E_VALIDATION.md  GCP_HARDWARE_TEST_REPORT.md  M4_EXECUTION_CHECKLIST.md  MILESTONE_v0.2.9_REPORT.md  MOCK_MODE_HARDENING_AUDIT.md  MODEL_PACKAGING.md  MULTICLOUD_E2E_STATUS.md  OPEN_SOURCE_BOUNDARY.md  PRODUCTION_GCP.md  README.md  REAL_USER_FLOW_VALIDATION.md  REPO_MAINTENANCE_SCOPE.md  SECURITY_MODEL.md  THREAT-MODEL-STRIDE.md  TROUBLESHOOTING.md  auditor-integration-guide.md  benchmarks.md  build-matrix.md  cli-ux.md  dependency-baseline.md  design.md  ephemeralml_paper.tex  infra.md  requirements.md  security_audit_2025-01-31.md  spike-gcp-kms-attestation.md  verifier-api.md
enclave/: Cargo.toml  Dockerfile.enclave  Dockerfile.enclave.aws-poc
enclave/src/: assembly.rs  attestation.rs  attestation_bridge.rs  audit.rs  candle_engine.rs  crypto_util.rs  cs_kms_client.rs  cs_token_client.rs  cs_transport_bridge.rs  error.rs  gcp_kms_client.rs  gcs_loader.rs  inference.rs  inference_handler.rs  kms_client.rs  kms_proxy_client.rs  lib.rs  main.rs  mock.rs  model_loader.rs  receipt.rs  server.rs  session_manager.rs  stage_executor.rs  tee_provider.rs  test_helpers.rs  trust_evidence.rs
enclave/tests/: candle_inference_test.rs  direct_mode_test.rs  gcp_integration_test.rs  gcs_kms_integration.rs  kms_deny_allow_test.rs  pipeline_integration_test.rs  quantized_inference_test.rs  tdx_attestation_test.rs
ephemeralml-doctor/: Cargo.toml  README.md
ephemeralml-doctor/src/: cli.rs  context.rs  error.rs  main.rs  output.rs
ephemeralml-doctor/src/checks/: allocator.rs  bucket.rs  clock.rs  eif.rs  kms.rs  mod.rs  role.rs
ephemeralml-doctor/tests/: cli_skeleton.rs
ephemeralml-doctor/tests/fixtures/eif/: ephemeralml-pilot.eif  ephemeralml-pilot.eif.cosign.bundle  ephemeralml-pilot.eif.sig
ephemeralml-smoke-test/: Cargo.toml  README.md
ephemeralml-smoke-test/src/: bundle.rs  cli.rs  context.rs  error.rs  main.rs  output.rs
ephemeralml-smoke-test/src/stages/: doctor.rs  enclave_launch.rs  inference.rs  mod.rs  receipt_verify.rs  s3_write.rs
ephemeralml-smoke-test/tests/: cli_skeleton.rs
evidence/: AUDIENCE_PIN_E2E_RESULTS.md  README.md  SMOKE_TEST_RESULTS.md  boot_logs.txt  instance_metadata.yaml  verify_output.txt
gateway-api/: Cargo.toml  Dockerfile  Dockerfile.mock-backend  README.md  compose.yaml
gateway-api/docs/: DEPLOY.md  HEALTH.md
gateway-api/scripts/: smoke_test_openai.py
gateway-api/src/: auth.rs  config.rs  lib.rs  main.rs  rate_limit.rs  reconnect.rs  routes.rs  state.rs  streaming.rs  types.rs
gateway-api/tests/: api_test.rs
host/: Cargo.toml
host/src/: aws_proxy.rs  error.rs  kms_proxy_server.rs  lib.rs  limits.rs  main.rs  metrics.rs  mock.rs  otel.rs  pcr.rs  proxy.rs  rate_limit.rs  retry.rs  spy.rs  storage.rs
host/tests/: degradation_tests.rs  spy_test.rs
keys/: policy_root_public.hex
manifests/: minilm-2stage.json
pilot/: README.md  audit_evidence.md  deploy.sh  verify.sh
scripts/: analyze_quality_determinism.py  analyze_repro.py  benchmark_report.py  cargo-local.sh  check_kms_integrity.sh  demo-pack.sh  (+32 more)
verifier-api/: Cargo.toml
verifier-api/src/: api_types.rs  auth.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  templates.rs  verify_dispatch.rs  view_model.rs
verifier-api/tests/: api_test.rs
(+716 files in other folders)
