[package]
name = "ephemeral-ml-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
candle-core = { workspace = true }
safetensors = { workspace = true }
ephemeral-ml-common = { path = "../common", features = [] }

# Benchmark dependencies (optional, behind "benchmark" feature)
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# Client-specific dependencies
ciborium = "0.2"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
hex = "0.4"
serde_cbor = "0.11"
ed25519-dalek = { workspace = true }
base64 = "0.22.1"
async-trait = "0.1"
hpke = { workspace = true, features = ["std", "x25519"] }
zeroize = { workspace = true }
x25519-dalek = { workspace = true }
coset = { workspace = true }
x509-parser = { workspace = true }
openssl = { workspace = true }
rand = { workspace = true }
confidential-ml-transport = { workspace = true, features = ["mock", "tcp"] }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["mock"]
mock = []
production = []
benchmark = [
    "candle-nn",
    "candle-transformers",
    "tokenizers",
    "chacha20poly1305",
    "ephemeral-ml-common/inference",
]

