[package]
name = "ephemeral-ml-client"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
ephemeral-ml-common = { path = "../common", features = [] }

# Benchmark dependencies (optional, behind "benchmark" feature)
candle-core = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# Client-specific dependencies
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
hex = "0.4"
serde_bytes = "0.11"
ed25519-dalek = { workspace = true }
base64 = "0.22.1"
async-trait = "0.1"
jsonwebtoken = { version = "9", optional = true }
coset = { workspace = true }
x509-parser = { workspace = true }
openssl = { workspace = true }
rand = { workspace = true }
confidential-ml-transport = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["mock"]
vendored-openssl = ["openssl/vendored"]
mock = ["confidential-ml-transport/mock", "confidential-ml-transport/tcp"]
production = ["confidential-ml-transport/tcp"]
gcp = ["confidential-ml-transport/tdx", "confidential-ml-transport/tcp", "confidential-ml-transport/mock", "jsonwebtoken"]
benchmark = [
    "candle-core",
    "safetensors",
    "candle-nn",
    "candle-transformers",
    "tokenizers",
    "chacha20poly1305",
    "ephemeral-ml-common/inference",
]

[[bin]]
name = "ephemeralml-verify"
path = "src/bin/ephemeralml_verify.rs"

[[bin]]
name = "ephemeralml"
path = "src/bin/ephemeralml.rs"

