[package]
name = "ephemeral-ml-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Pin explicit versions so this crate can build outside the workspace (e.g. inside enclave Docker builds)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# Cryptographic dependencies
hpke = "0.11"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hkdf = "0.12"

# CBOR serialization
serde_cbor = "0.11"

# Lazy initialization
lazy_static = "1.4"

# Serde bytes for efficient byte array serialization
serde_bytes = "0.11"
byteorder = "1.5.0"

# Optional ML dependencies (only for benchmark binaries via "inference" feature)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }

[dev-dependencies]
proptest = "1.0"

[features]
default = []
inference = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
