[package]
name = "ephemeral-ml-common"
version = "0.2.8"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Pin explicit versions so this crate can build outside the workspace (e.g. inside enclave Docker builds)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# Cryptographic dependencies
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# CBOR serialization
ciborium = "0.2"

# Confidential ML transport
confidential-ml-transport = { workspace = true, features = ["mock", "tcp"] }
bytes = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1.0", features = ["io-util"] }

# Lazy initialization
lazy_static = "1.4"

# Serde bytes for efficient byte array serialization
serde_bytes = "0.11"

# Optional ML dependencies (only for benchmark binaries via "inference" feature)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }

[dev-dependencies]
proptest = "1.10"

[features]
default = []
inference = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
