[package]
name = "ephemeral-ml-compliance"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Compliance evidence bundle generation and verification for EphemeralML"

[dependencies]
ephemeral-ml-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
# Tests use the common crate's types directly

[[bin]]
name = "ephemeralml-compliance"
path = "src/bin/compliance_cli.rs"
