[package]
name = "ephemeral-ml-enclave"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }
ephemeral-ml-common = { path = "../common", features = ["inference"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }

# Enclave-specific dependencies
aws-nitro-enclaves-nsm-api = { workspace = true, optional = true }
tokio-vsock = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
hex = "0.4"
serde_cbor = "0.11"
serde_bytes = "0.11"
hpke = { workspace = true, features = ["std", "x25519"] }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
rsa = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
aws-sdk-kms = "1.100.0"
aws-config = "1.8.14"
byteorder = "1.5.0"
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }
confidential-ml-transport = { workspace = true }
confidential-ml-pipeline = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
serde_bytes = "0.11"

[features]
default = ["mock"]
mock = ["confidential-ml-transport/mock", "confidential-ml-transport/tcp", "confidential-ml-pipeline/mock", "confidential-ml-pipeline/tcp"]
production = ["aws-nitro-enclaves-nsm-api", "tokio-vsock", "confidential-ml-transport/vsock", "confidential-ml-transport/nitro", "confidential-ml-pipeline/vsock", "confidential-ml-transport/tcp", "confidential-ml-pipeline/tcp"]
tdx = ["openssl", "confidential-ml-transport/tdx"]
gcp = ["tdx", "reqwest", "base64", "confidential-ml-transport/tcp", "confidential-ml-pipeline/tcp"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
