[package]
name = "ephemeral-ml-enclave"
version = "0.2.9"
edition = "2021"
license = "Apache-2.0"
default-run = "ephemeral-ml-enclave"

[dependencies]
# Workspace dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }
ephemeral-ml-common = { path = "../common", features = ["inference"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }

# Enclave-specific dependencies
aws-nitro-enclaves-nsm-api = { workspace = true, optional = true }
tokio-vsock = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
hex = "0.4"
ciborium = "0.2"
serde_bytes = "0.11"
hpke = { workspace = true, features = ["std", "x25519"] }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
rsa = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
aws-sdk-kms = { version = "1.100.0", optional = true }
aws-config = { version = "1.8.14", optional = true }
byteorder = "1.5.0"
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = "0.22"
# Enclave always needs transport mock (to accept non-TEE client attestations) and tcp.
confidential-ml-transport = { workspace = true, features = ["mock", "tcp"] }
confidential-ml-pipeline = { workspace = true, features = ["tcp"] }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
serde_bytes = "0.11"

[features]
default = []
# Application-level mock: mock attestation, mock server mode.
# Transport-level mock (MockVerifier for accepting client attestations) is always available.
mock = ["confidential-ml-pipeline/mock"]
production = ["aws-nitro-enclaves-nsm-api", "aws-sdk-kms", "aws-config", "tokio-vsock", "confidential-ml-transport/vsock", "confidential-ml-transport/nitro", "confidential-ml-pipeline/vsock"]
tdx = ["openssl", "confidential-ml-transport/tdx"]
gcp = ["tdx", "reqwest"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[[bin]]
name = "ephemeralml-orchestrator"
path = "src/bin/orchestrator.rs"
