[package]
name = "ephemeral-ml-enclave"
version = "0.2.9"
edition = "2021"
license = "Apache-2.0"
default-run = "ephemeral-ml-enclave"

[dependencies]
# Workspace dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }
ephemeral-ml-common = { path = "../common", features = ["inference"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
clap = { version = "4.6", features = ["derive", "env"] }

# Enclave-specific dependencies
aws-nitro-enclaves-nsm-api = { workspace = true, optional = true }
tokio-vsock = { workspace = true, optional = true }
openssl = { workspace = true }
hex = "0.4"
ciborium = "0.2"
serde_bytes = "0.11"
hpke = { workspace = true, features = ["std", "x25519"] }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
aws-sdk-kms = { version = "1.106.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"], optional = true }
aws-config = { version = "1.8.15", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client", "credentials-process", "sso"], optional = true }
reqwest = { version = "0.13", features = ["json", "form"], optional = true }
base64 = "0.22"
# Enclave production uses an explicit one-way host verifier for non-TEE
# control-plane peers; the transport mock feature is development-only.
confidential-ml-transport = { workspace = true, features = ["tcp"] }
confidential-ml-pipeline = { workspace = true, features = ["tcp"] }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]

[features]
default = []
# Application-level mock: mock attestation, mock server mode.
mock = ["confidential-ml-pipeline/mock", "confidential-ml-transport/mock"]
production = ["aws-nitro-enclaves-nsm-api", "aws-sdk-kms", "aws-config", "tokio-vsock", "confidential-ml-transport/vsock", "confidential-ml-transport/nitro", "confidential-ml-pipeline/vsock"]
tdx = ["confidential-ml-transport/tdx"]
gcp = ["tdx", "reqwest"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[[bin]]
name = "ephemeralml-orchestrator"
path = "src/bin/orchestrator.rs"
required-features = ["mock"]
