[package]
name = "ephemeralml-gateway"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible HTTP gateway for EphemeralML confidential inference"
license = "Apache-2.0"

[[bin]]
name = "ephemeralml-gateway"
path = "src/main.rs"

[dependencies]
ephemeral-ml-client = { path = "../client" }
ephemeral-ml-common = { path = "../common" }

# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto / hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
subtle = "2.5"
anyhow = "1.0"
rand = "0.8"
dashmap = "6"

[features]
default = ["mock"]
mock = ["ephemeral-ml-client/mock"]
gcp = ["ephemeral-ml-client/gcp"]
production = ["ephemeral-ml-client/production"]

[dev-dependencies]
axum-test = "18"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
