[package]
name = "ephemeral-ml-host"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
ephemeral-ml-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
ciborium = { workspace = true }
hpke = { workspace = true, features = ["std", "x25519"] }

# Host-specific dependencies
tokio-vsock = { workspace = true, optional = true }
libc = "0.2"
aws-config = "1.8.14"
aws-sdk-kms = "1.100.0"
aws-sdk-s3 = "1.122.0"
aws-types = "1.3.11"
async-trait = { workspace = true }
base64 = "0.22.1"
sha2 = { workspace = true }
hex = "0.4"
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
confidential-ml-transport = { workspace = true }
confidential-ml-pipeline = { workspace = true }
bytes = { workspace = true }

# Observability (v1)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["mock"]
mock = ["confidential-ml-transport/mock", "confidential-ml-transport/tcp", "confidential-ml-pipeline/mock", "confidential-ml-pipeline/tcp"]
production = ["tokio-vsock", "confidential-ml-transport/vsock", "confidential-ml-transport/nitro", "confidential-ml-pipeline/vsock", "confidential-ml-transport/tcp", "confidential-ml-pipeline/tcp"]
gcp = ["confidential-ml-transport/tdx", "confidential-ml-transport/tcp", "confidential-ml-pipeline/tcp"]
