[package]
name = "ephemeralml-verifier-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hosted verification API for EphemeralML attested execution receipts"

[[bin]]
name = "ephemeralml-verifier"
path = "src/main.rs"

[dependencies]
ephemeral-ml-common = { path = "../common" }

# Web framework
axum = { version = "0.8", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
rand = "0.8"
tokio = { version = "1.0", features = ["full", "test-util"] }
